jump links mobile fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,12 +357,14 @@ body.product-landing div.section.jumplinks {
   height: 64px;
 }
 
+/* jumplinks */
 body.product-landing div.section.jumplinks ul {
   display: flex;
   list-style: none;
   padding: 0;
   margin-top: 0;
   margin-bottom: 0;
+  overflow: hidden;
 }
 
 body.product-landing div.section.jumplinks ul > li {
@@ -388,6 +390,62 @@ body.product-landing div.section.jumplinks ul > li > a {
 body.product-landing div.section.jumplinks ul > li > a:hover {
   font-weight: 600;
   letter-spacing: 0;
+}
+
+@media (max-width: 1023px) {
+  body.product-landing div.section.jumplinks {
+    overflow: hidden;
+  }
+
+  body.product-landing div.section.jumplinks > .default-content-wrapper {
+    margin: unset;
+  }
+
+  body.product-landing div.section.jumplinks.expanded > .default-content-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+  }
+
+  body.product-landing div.section.jumplinks ul {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  body.product-landing div.section.jumplinks.expanded {
+    height: unset;
+  }
+
+  body.product-landing div.section.jumplinks.expanded ul > li {
+    border-bottom: 1px solid #d2d2d2;
+    width: 100%;
+    margin-right: 0;
+  }
+
+  body.product-landing div.section.jumplinks ul > li > a {
+    padding-left: 32px;
+  }
+
+  body.product-landing div.section.jumplinks ul > li:first-of-type > a {
+    font-weight: 600;
+  }
+
+  body.product-landing div.section.jumplinks ul > li:first-of-type::after {
+    content: "";
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    width: 24px;
+    height: 24px;
+    background-image: url('/icons/downarrow.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  body.product-landing div.section.jumplinks ul.expanded > li:first-of-type::after {
+    transform: rotate(180deg);
+  }
 }
 
 body.product-landing div.section.cards-container {
